--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,12 @@
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "firebase": "^10.13.2",
+    "firebaseui": "^6.1.0",
     "framer-motion": "^11.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "socket.io-client": "^4.8.0"
