--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,18 @@
   ],
   "dependencies": {
     "body-parser": "^1.20.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "firebase-admin": "^12.5.0",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.6.4",
     "openai": "^4.65.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
