--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "openai": "^4.65.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "passport-github2": "^0.1.12",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.0"
   },
