--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "firebase-admin": "^12.5.0",
-    "helmet": "^7.1.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.4",
     "openai": "^4.65.0",
     "passport": "^0.7.0",
