--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "eslint": "^9.12.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
     "nodemon": "^3.1.7",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0"
   }
 }
