--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
