--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.13.2",
     "firebaseui": "^6.1.0",
     "framer-motion": "^11.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
