--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,51 @@
-/client/node_modules
-/server/node_modules
+# Dependencies
+node_modules/
+/.pnp
+.pnp.js
 
-/server/.yarn/*
-!/server/.yarn/patches
-!/server/.yarn/plugins
-!/server/.yarn/releases
-!/server/.yarn/sdks
-!/server/.yarn/versions
+# Testing
+/coverage
 
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/caching#zero-installs
+# Production
+/build
+/dist
 
-#!.yarn/cache
-.pnp.*
+# Vite specific
+/.vite
 
+# Misc
+.DS_Store
 .env
-/server/project-404-dbd61-firebase-adminsdk-h4qwe-dad62b7d92.json
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# Vite build output
+dist/
