--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^8.7.0"
   },
   "devDependencies": {
-    "eslint": "^9.12.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.0.1",
     "nodemon": "^3.1.7",
